# beebem-macos

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
docs/: porting-plan.md
src/: AppDelegate.h  AppDelegate.mm  BeebEmPages.cpp  BeebEmPages.h  BeebMetalView.h  BeebMetalView.mm  BeebRenderer.h  BeebRenderer.mm  BeebWin.cpp  BeebWinDx.cpp  ComboBox.cpp  CoreAudioStreamer.h  CoreAudioStreamer.mm  FileDialog.cpp  KeyMap.cpp  KeyMap.h  Main.cpp  Main.h  Resource.h  RomConfigDialog.h  Sdl.h  Shaders.metal  Sound.cpp  UserKeyboardDialog.cpp  UserPortBreakoutBox.cpp  Video.cpp  main.mm
src/macos/: BeebEmPages.mm  BeebMenu.h  BeebMenu.mm  FileDialogMac.mm  MacMain.h  MacPlatform.h  MacPlatform.mm  Windows.mm
src/posix/: Windows.cpp  Windows.h  ansidecl.h  commctrl.h  shlobj.h  windowsx.h
